--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 body {
   width: 100%;
   background: url(../圖片/首頁背景.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 body h1 {
   text-align: center;
@@ -58,7 +61,7 @@ nav img {
 }
 .nowBuy {
   display: block;
-  margin-top: -250px;
+  margin-top: -400px;
   position: absolute;
   z-index: 3;
 }
@@ -199,9 +202,10 @@ section img {
   height: 525px;
   display: flex;
   border-top: 10px solid #ff003d;
-  border-bottom: 10px solid #ff003d;
+  /* border-bottom: 10px solid #ff003d; */
   transform: skewY(10.02deg);
   box-shadow: 0 3px 15px 3px rgba(51, 51, 51, 0.5);
+  margin-bottom: 5px;
 }
 .main_1-text2 {
   display: block;
@@ -259,7 +263,7 @@ section img {
 .main_2-text {
   float: right;
   transform: skewY(13.59deg);
-  margin-top: 100px;
+  /* margin-top: 100px; */
   padding-bottom: 158px;
   transform: matrix(1, -0.3, 0, 1, 0, 0);
   text-shadow: 2px 3px 5px #4d4d4d;
@@ -280,7 +284,7 @@ section img {
   border-top: 10px solid #3c86d1;
   border-bottom: 10px solid #3c86d1;
   transform: skewY(-13.59deg);
-  margin-top: 50px;
+  /* margin-top: 50px; */
   background-image: url(../圖片/城鎮.jpg);
   position: relative;
   overflow: hidden;
@@ -551,4 +555,44 @@ footer {
   height: 113px;
   background-color: black;
   color: white;
+}
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.YTPOverlay {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.YTPOverlay,
+.video-background iframe {
+  /* position: absolute;
+  top: 0;
+  left: 0; */
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: -1;
+  /* transform: skewY(5deg); */
+  margin-top: -100px;
+  /* margin-bottom: -600px; */
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .YTPOverlay {
+    height: 100%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .YTPOverlay {
+    width: 100%;
+    left: -100%;
+  }
 }
