--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ section img {
   height: 525px;
   display: flex;
   border-top: 10px solid #ff003d;
-  /* border-bottom: 10px solid #ff003d; */
+  border-bottom: 10px solid #ff003d;
   transform: skewY(10.02deg);
   box-shadow: 0 3px 15px 3px rgba(51, 51, 51, 0.5);
   margin-bottom: 5px;
@@ -268,7 +268,7 @@ section img {
 .main_2-text {
   float: right;
   transform: skewY(13.59deg);
-  /* margin-top: 100px; */
+  margin-top: 100px;
   padding-bottom: 158px;
   transform: matrix(1, -0.3, 0, 1, 0, 0);
   text-shadow: 2px 3px 5px #4d4d4d;
