--- a/css/game.css
+++ b/css/game.css
@@ -5,7 +5,8 @@ body {
   background: url(../圖片/首頁背景.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: auto;
+  background-position: center;
   z-index: -1;
 }
 body h1 {
