--- a/css/monsterAll.css
+++ b/css/monsterAll.css
@@ -5,9 +5,10 @@ body {
   background: url(../圖片/main_bg-sp.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   /* background-position: left top; */
   /* background-attachment: scroll; */
+  background-position: center;
 }
 body h1 {
   text-align: center;
@@ -149,7 +150,7 @@ span {
   /* background-image: url(../圖片/標題黑框.png);
   background-position: center;
   background-repeat: no-repeat; */
-  margin-top: 700px;
+  margin-top: 40%;
   /* margin-bottom: 200px; */
 }
 span img {
@@ -167,7 +168,7 @@ main {
   width: 100%;
   height: 100%;
   background: url(../圖片/bg-red.jpg);
-  margin-top: -200px;
+  margin-top: -10%;
 }
 section {
   width: 100%;
