--- a/css/monsterAll_rwd.css
+++ b/css/monsterAll_rwd.css
@@ -190,6 +190,22 @@
   .all_info {
     margin-bottom: 20%;
   }
+  /* .monster_top_title {
+    margin-top: -1%;
+  } */
+  .span h1 {
+    margin-top: -20%;
+    margin-bottom: 30%;
+  }
+  main {
+    margin-top: 20%;
+  }
+  .btn-totop {
+    position: fixed;
+    bottom: 0;
+    right: 30px;
+    bottom: 30px;
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -198,6 +214,12 @@
   }
   .monsters img {
     width: 430px;
+  }
+  main {
+    margin-top: 25%;
+  }
+  span {
+    margin-top: 60%;
   }
 }
 
@@ -220,6 +242,12 @@
   .import-momster3 h4 {
     font-size: 22px;
   }
+  main {
+    margin-top: 30%;
+  }
+  span {
+    margin-top: 75%;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -228,6 +256,9 @@
   }
   .monsters img {
     width: 380px;
+  }
+  main {
+    margin-top: 35%;
   }
 }
 
@@ -250,6 +281,12 @@
   .import-momster3 h4 {
     font-size: 19px;
   }
+  main {
+    margin-top: 50%;
+  }
+  span {
+    margin-top: 90%;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -258,5 +295,8 @@
   }
   .monsters img {
     width: 320px;
+  }
+  main {
+    margin-top: 60%;
   }
 }
