--- a/css/news_rwd.css
+++ b/css/news_rwd.css
@@ -41,6 +41,12 @@
     width: 100%;
     height: 60%;
   }
+  .btn-totop {
+    position: fixed;
+    bottom: 0;
+    right: 5px;
+    bottom: 5px;
+  }
 }
 
 /* @media screen and (max-width: 650px) {
