--- a/css/weaponry.css
+++ b/css/weaponry.css
@@ -321,9 +321,11 @@ h2 {
 .btn-totop {
   float: right;
   display: block;
+  margin-top: 0%;
+  margin-right: 30px;
   /* margin-top: -250px;
-  margin-right: 30px; */
-  position: fixed;
+
+  /* position: fixed; */
   right: 30px;
   bottom: 0;
 }
@@ -332,7 +334,6 @@ h2 {
 }
 .bg_bottom {
   width: 100%;
-  margin-top: -250px;
   height: 23vw;
 }
 /* 頁尾  */
