--- a/css/weaponry_rwd.css
+++ b/css/weaponry_rwd.css
@@ -162,6 +162,12 @@
     width: 50%;
     font-size: 80px;
   }
+  .btn-totop {
+    position: fixed;
+    bottom: 0;
+    right: 30px;
+    bottom: 30px;
+  }
 }
 
 @media screen and (max-width: 700px) {
